<resources>
    <string name="app_name">My Notes</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="title_activity_fingerprint">FingerprintActivity</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="place_your_fingertip_on_home_button_to_verify_your_identity">Please place your fingertip on home button to verify your identity and login to the app</string>
</resources>
